--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Resend unlock instructions</h2>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">
+            <h3 class="text-center">Resend unlock instructions</h3>
+          </div>
+        </div>
+        <div class="panel-body">
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+          <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, class: 'form-group' }) do |f| %>
+          <%= devise_error_messages! %>
+            <div class="form-group">
+              <%= f.label :email %><br />
+              <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+            </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+            <div class="form-group">
+              <%= f.submit "Resend unlock instructions", class: 'btn btn-default btn-lg btn-block' %>
+            </div>
+          <% end %>
+        </div>
+        <div class="panel-footer">
+          <%= render "devise/shared/links" %>
+        </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
