--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,13 @@
         <li><%= link_to 'Home', root_path %></li>
         <% if user_signed_in? %>
           <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'New', new_product_path %></li>
+              <li><%= link_to 'All', products_path %></li>
+            </ul>
+          </li>
+          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.full_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'User Settings', edit_user_registration_path %></li>
