--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   <body>
 
     <%= render '/layouts/navigation' %>
+    <%= render 'layouts/alerts' %>
 
     <%= yield %>
+    
   </body>
 </html>
