--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,35 +1,49 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row margin-top-20">
+		<div class="col-md-12">
+			<div class="panel panel-default panel-table">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col col-xs-6">
+              <div class="panel-heading">Products</div>
+            </div>
+            <div class="col col-xs-6">
+              <%= link_to 'New Product', new_product_path, class: 'btn btn-default btn-sm pull-right' %>
+            </div>
+          </div>
+  			</div>
+        <div class="panel-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Permalink</th>
+                <th>Description</th>
+                <th>Created</th>
+                <th>Show</th>
+                <th>Edit</th>
+                <th colspan="2"></th>
+              </tr>
+            </thead>
 
-<h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Permalink</th>
-      <th>Description</th>
-      <th>References</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= product.permalink %></td>
-        <td><%= product.description %></td>
-        <td><%= product.references %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_product_path %>
+            <tbody>
+              <% @products.each do |product| %>
+                <tr>
+                  <td><%= product.name %></td>
+                  <td><%= formatted_price(product.price) %></td>
+                  <td><%= product.permalink %></td>
+                  <td><%= product.description %></td>
+                  <td><%= product.user.full_name %></td>
+                  <td><%= link_to '<i class="fa fa-folder-open-o fa-lg"></i>'.html_safe, product, class: 'btn btn-success btn-xs' %></td>
+                  <td><%= link_to '<i class="fa fa-pencil-square-o fa-lg""></i>'.html_safe, edit_product_path(product), class: 'btn btn-warning btn-xs' %></td>
+                  <td><%= link_to '<i class="fa fa-trash-o fa-lg""></i>'.html_safe, product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
