--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,34 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><%= @product.name %></h3>
+        </div>
+        <div class="panel-body">
+          <p>
+            <strong>Price:</strong>
+            <%= formatted_price(@product.price) %>
+          </p>
+          <p>
+            <strong>Permalink:</strong>
+            <%= @product.permalink %>
+          </p>
+          <p>
+            <strong>Description:</strong>
+            <%= @product.description %>
+          </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-
-<p>
-  <strong>Permalink:</strong>
-  <%= @product.permalink %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p>
-  <strong>References:</strong>
-  <%= @product.references %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+          <p>
+            <strong>Created By:</strong>
+            <%= @product.user.full_name %>
+          </p>
+        </div>
+        <div class="panel-footer">
+          <%= link_to 'Edit', edit_product_path(@product) %></br>
+          <%= link_to 'Back', products_path %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
