--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,6 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- <a class="navbar-brand" href="#">Stripe Payments</a> -->
       <%= link_to 'Stripe Payments', root_path, class: 'navbar-brand' %>
     </div>
 
@@ -16,14 +15,21 @@
         <li><%= link_to 'Home', root_path %></li>
         <% if user_signed_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'New', new_product_path %></li>
               <li><%= link_to 'All', products_path %></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.full_name %> <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plans <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'New', new_plan_path %></li>
+              <li><%= link_to 'All', plans_path %></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.full_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'User Settings', edit_user_registration_path %></li>
               <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
