--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -1,47 +1,67 @@
-<%= form_for(plan) do |f| %>
-  <% if plan.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(plan.errors.count, "error") %> prohibited this plan from being saved:</h2>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">
+            <h3 class="text-center"><%= params[:action].titleize %> <%= params[:controller].titleize.singularize %></h3>
+          </div>
+        </div>
+        <div class="panel-body">
+          <%= form_for @plan, html: { class: 'form-group'} do |f| %>
+            <% if plan.errors.any? %>
+              <div id="error_explanation">
+                <div class="alert alert-danger">
+                  <button type="button" class="close" data-dismiss="alert">×</button>
+                  <% plan.errors.full_messages.each do |message| %>
+                    <p><%= message %></p>
+                  <% end %>
+                </div>
+              </div>
+            <% end %>
 
-      <ul>
-      <% plan.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+            <div class="form-group">
+              <%= f.label "Stripe Id" %>
+              <%= f.text_field :stripe_id, class: 'form-control', placeholder: 'stripe_name_format' %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :name %>
+              <%= f.text_field :name, class: 'form-control' %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :description %>
+              <%= f.text_field :description, class: 'form-control' %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :amount, "Amount (in cents)" %>
+              <%= f.number_field :amount, class: 'form-control' %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :interval %>
+              <%= f.select :interval, options_for_select(plan.set_plan_type.map { |e| [e.titleize, e]}), {}, html_options = {class: 'form-control', :disabled => plan.is_editable(params[:action])} %>
+            </div>
+
+            <div class="form-group">
+              <%= f.check_box :published, class: 'form-check' %>
+              <%= f.label :published %>
+            </div>
+
+            <div class="form-group">
+              <%= f.submit class: 'btn btn-default btn-lg btn-block' %>
+            </div>
+          <% end %>
+        </div>
+        <div class="panel-footer">
+          <%= link_to 'Back', plans_path %></br>
+          <% if params[:action] === 'edit' %>
+            <%= link_to 'Show', @plan %></br>
+          <% end %>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :stripe_id %>
-    <%= f.text_field :stripe_id %>
   </div>
-
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :amount %>
-    <%= f.number_field :amount %>
-  </div>
-
-  <div class="field">
-    <%= f.label :interval %>
-    <%= f.text_field :interval %>
-  </div>
-
-  <div class="field">
-    <%= f.label :published %>
-    <%= f.check_box :published %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
