--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,37 +1,51 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row margin-top-20">
+		<div class="col-md-12">
+			<div class="panel panel-default panel-table">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col col-xs-6">
+              <div class="panel-heading">Plans</div>
+            </div>
+            <div class="col col-xs-6">
+              <%= link_to 'New Plan', new_plan_path, class: 'btn btn-default btn-sm pull-right' %>
+            </div>
+          </div>
+  			</div>
+        <div class="panel-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>Stripe</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Amount</th>
+                <th>Interval</th>
+                <th>Published</th>
+                <th>Show</th>
+                <th>Edit</th>
+                <th colspan="2"></th>
+              </tr>
+            </thead>
 
-<h1>Plans</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Stripe</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Amount</th>
-      <th>Interval</th>
-      <th>Published</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @plans.each do |plan| %>
-      <tr>
-        <td><%= plan.stripe_id %></td>
-        <td><%= plan.name %></td>
-        <td><%= plan.description %></td>
-        <td><%= plan.amount %></td>
-        <td><%= plan.interval %></td>
-        <td><%= plan.published %></td>
-        <td><%= link_to 'Show', plan %></td>
-        <td><%= link_to 'Edit', edit_plan_path(plan) %></td>
-        <td><%= link_to 'Destroy', plan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Plan', new_plan_path %>
+            <tbody>
+              <% @plans.each do |plan| %>
+                <tr>
+                  <td><%= plan.stripe_id %></td>
+                  <td><%= plan.name %></td>
+                  <td><%= plan.description %></td>
+                  <td><%= formatted_price(plan.amount) %></td>
+                  <td><%= plan.interval %></td>
+                  <td><%= plan.published %></td>
+                  <td><%= link_to '<i class="fa fa-folder-open-o fa-lg"></i>'.html_safe, plan, class: 'btn btn-success btn-xs' %></td>
+                  <td><%= link_to '<i class="fa fa-pencil-square-o fa-lg""></i>'.html_safe, edit_plan_path(plan), class: 'btn btn-warning btn-xs' %></td>
+                  <td><%= link_to '<i class="fa fa-trash-o fa-lg""></i>'.html_safe, plan, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
