--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -26,7 +26,7 @@
             </div>
 
             <div class="form-group">
-              <%= f.label :price %>
+              <%= f.label :price, "Price (in cents)" %>
               <%= f.number_field :price, class: 'form-control' %>
             </div>
 
