--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,9 @@
 		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title"><%= @product.name %></h3>
+					<div class="panel-title">
+						<h3 class="text-center"><%= @product.name %></h3>
+					</div>
         </div>
         <div class="panel-body">
           <p>
