--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,6 +29,12 @@
             </ul>
           </li>
           <li class="dropdown">
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sales <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'All', sales_path %></li>
+            </ul>
+          </li>
+          <li class="dropdown">
             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.full_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'User Settings', edit_user_registration_path %></li>
