--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,33 +1,46 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row margin-top-20">
+		<div class="col-md-12">
+			<div class="panel panel-default panel-table">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col col-xs-6">
+              <div class="panel-heading">Sales</div>
+            </div>
+            <!-- <div class="col col-xs-6">
+              <%# link_to 'New Product', new_sale_path, class: 'btn btn-default btn-sm pull-right' %>
+            </div> -->
+          </div>
+  			</div>
+        <div class="panel-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>Stripe Id</th>
+  	            <th>Product</th>
+  	            <th>User ID</th>
+  	            <th>Name</th>
+  	            <th>Email</th>
+                <th>Show</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
 
-<h1>Sales</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Stripe</th>
-      <th>Add foreign key</th>
-      <th></th>
-      <th></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @sales.each do |sale| %>
-      <tr>
-        <td><%= sale.stripe_id %></td>
-        <td><%= sale.add_foreign_key %></td>
-        <td><%= sale. %></td>
-        <td><%= sale. %></td>
-        <td><%= link_to 'Show', sale %></td>
-        <td><%= link_to 'Edit', edit_sale_path(sale) %></td>
-        <td><%= link_to 'Destroy', sale, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Sale', new_sale_path %>
+            <tbody>
+              <% @sales.each do |sale| %>
+                <tr>
+                  <td><%= sale.stripe_id %></td>
+                  <td><%= sale.product.name %></td>
+                  <td><%= sale.user.id %></td>
+                  <td><%= sale.user.full_name %></td>
+                  <td><%= sale.user.email %></td>
+                  <td><%= link_to '<i class="fa fa-folder-open-o fa-lg"></i>'.html_safe, sale, class: 'btn btn-success btn-xs' %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
