--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,24 +1,35 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+					<div class="panel-title">
+						<h3 class="text-center"><%= sale.product.name.titleize %></h3>
+					</div>
+        </div>
+        <div class="panel-body">
+          <p>
+            <strong>Stripe Id:</strong>
+            <%= sale.stripe_id %>
+          </p>
+          <p>
+            <strong>User Id:</strong>
+            <%= sale.user.id %>
+          </p>
+          <p>
+            <strong>Name:</strong>
+            <%= sale.user.full_name %>
+          </p>
 
-<p>
-  <strong>Stripe:</strong>
-  <%= @sale.stripe_id %>
-</p>
-
-<p>
-  <strong>Add foreign key:</strong>
-  <%= @sale.add_foreign_key %>
-</p>
-
-<p>
-  <strong>:</strong>
-  <%= @sale. %>
-</p>
-
-<p>
-  <strong>:</strong>
-  <%= @sale. %>
-</p>
-
-<%= link_to 'Edit', edit_sale_path(@sale) %> |
-<%= link_to 'Back', sales_path %>
+          <p>
+            <strong>Email:</strong>
+            <%= sale.user.email %>
+          </p>
+        </div>
+        <div class="panel-footer">
+          <%= link_to 'Back', sales_path %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
