added devise authenticate for plans, products, sales and subscriptions updated plan methods for interval and price join added subscriptions to navigation updated show and index format for subscriptions

--- a/app/views/subscriptions/show.html.erb
+++ b/app/views/subscriptions/show.html.erb
@@ -1,19 +1,34 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Stripe:</strong>
-  <%= @subscription.stripe_id %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @subscription.user %>
-</p>
-
-<p>
-  <strong>Plan:</strong>
-  <%= @subscription.plan %>
-</p>
-
-<%= link_to 'Edit', edit_subscription_path(@subscription) %> |
-<%= link_to 'Back', subscriptions_path %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+					<div class="panel-title">
+						<h3 class="text-center"><%= @subscription.user.full_name.titleize %></h3>
+					</div>
+        </div>
+        <div class="panel-body">
+          <p>
+            <strong>Subscription Id:</strong>
+            <%= @subscription.stripe_id %>
+          </p>
+          <p>
+            <strong>Email:</strong>
+            <%= @subscription.user.email %>
+          </p>
+          <p>
+            <strong>Plan:</strong>
+            <%= @subscription.plan.name.titleize %>
+          </p>
+          <p>
+            <strong>Price:</strong>
+            <%= @subscription.plan.price_interval.titleize %>
+          </p>
+        </div>
+        <div class="panel-footer">
+          <%= link_to 'Back', subscriptions_path %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
