--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,31 +1,45 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row margin-top-20">
+		<div class="col-md-12">
+			<div class="panel panel-default panel-table">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col col-xs-6">
+              <div class="panel-heading">Subscriptions</div>
+            </div>
+            <!-- <div class="col col-xs-6">
+              <%# link_to 'New Product', new_sale_path, class: 'btn btn-default btn-sm pull-right' %>
+            </div> -->
+          </div>
+  			</div>
+        <div class="panel-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>Subscription Id</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Plan</th>
+                <th>Price/Interval</th>
+                <th colspan="1"></th>
+              </tr>
+            </thead>
 
-<h1>Subscriptions</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Stripe</th>
-      <th>User</th>
-      <th>Plan</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @subscriptions.each do |subscription| %>
-      <tr>
-        <td><%= subscription.stripe_id %></td>
-        <td><%= subscription.user %></td>
-        <td><%= subscription.plan %></td>
-        <td><%= link_to 'Show', subscription %></td>
-        <td><%= link_to 'Edit', edit_subscription_path(subscription) %></td>
-        <td><%= link_to 'Destroy', subscription, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Subscription', new_subscription_path %>
+            <tbody>
+              <% @subscriptions.each do |subscription| %>
+                <tr>
+                  <td><%= subscription.stripe_id %></td>
+                  <td><%= subscription.user.full_name.titleize %></td>
+                  <td><%= subscription.user.email %></td>
+                  <td><%= subscription.plan.name.titleize %></td>
+                  <td><%= subscription.plan.price_interval.titleize %></td>
+                  <td><%= link_to '<i class="fa fa-folder-open-o fa-lg"></i>'.html_safe, subscription, class: 'btn btn-success btn-xs' %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
