--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+		<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-title">
@@ -10,15 +10,20 @@
         <div class="panel-body">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 					<%= devise_error_messages! %>
-            <div class="form-group">
-              <%= f.label :first_name %>
-              <%= f.text_field :first_name, autofocus: true, class: 'form-control' %>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :last_name %>
-              <%= f.text_field :last_name, autofocus: true, class: 'form-control' %>
-            </div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<%= f.label :first_name, 'First Name' %>
+									<%= f.text_field :first_name, autofocus: true, class: 'form-control' %>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<%= f.label :last_name, 'Last Name' %>
+									<%= f.text_field :last_name, autofocus: true, class: 'form-control' %>
+								</div>
+							</div>
+						</div>
 
             <div class="form-group">
               <%= f.label :email %>
@@ -29,7 +34,7 @@
               <%= f.label :password %>
               <% if @minimum_password_length %>
               <em>(<%= @minimum_password_length %> characters minimum)</em>
-              <% end %><br />
+              <% end %>
               <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
             </div>
 
