added purchase js for stripe transactions and subscriptions added form tag forms for transactions due to stripes reqs added form error and success scss added various app and user helpers for form handling and user verifications

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,7 +32,7 @@
                 <tr>
                   <td><%= product.name %></td>
                   <td><%= formatted_price(product.price) %></td>
-                  <td><%= product.permalink %></td>
+                  <td><%= link_to "#{product.permalink}", show_buy_path(product.permalink) %></td>
                   <td><%= product.description %></td>
                   <td><%= product.user.full_name %></td>
                   <td><%= link_to '<i class="fa fa-folder-open-o fa-lg"></i>'.html_safe, product, class: 'btn btn-success btn-xs' %></td>
