--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,7 +14,7 @@
           </p>
           <p>
             <strong>Permalink:</strong>
-            <%= @product.permalink %>
+            <%= link_to 'Buy Now', show_buy_path(@product.permalink) %>
           </p>
           <p>
             <strong>Description:</strong>
