--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,3 +5,15 @@
 .field_with_errors {
   padding: 0px;
 }
+
+.state-error {
+  input, select, textarea,  {
+    background: #fff0f0;
+  }
+}
+
+.state-success {
+  input, select, textarea,  {
+    background: #f0fff0;
+  }
+}
