--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "https://www.google.com/recaptcha/api.js" %>
+    <%= javascript_include_tag "https://js.stripe.com/v2/" %>
   </head>
 
   <body>
@@ -14,6 +16,6 @@
     <%= render 'layouts/alerts' %>
 
     <%= yield %>
-    
+
   </body>
 </html>
