--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -20,11 +20,10 @@
                 <th>Card Name</th>
                 <th>Last Four</th>
                 <th>Type</th>
-                <th>Exp Month</th>
-                <th>Exp Year</th>
+                <th>Expires</th>
                 <th>Default</th>
-                <th>User</th>
-                <th colspan="3"></th>
+                <th>Show</th>
+                <th colspan="2"></th>
               </tr>
             </thead>
 
@@ -35,12 +34,10 @@
                   <td><%= card.card_name %></td>
                   <td><%= card.card_last_four %></td>
                   <td><%= card.card_type %></td>
-                  <td><%= card.card_exp_month %></td>
-                  <td><%= card.card_exp_year %></td>
-                  <td><%= card.default_card %></td>
-                  <td><%= card.user_id %></td>
+                  <td><%= card.card_exp_combined %></td>
+                  <td><%= card.default_card? ? 'Yes' : 'No' %></td>
                   <td><%= link_to '<i class="fa fa-folder-open-o fa-lg"></i>'.html_safe, card, class: 'btn btn-success btn-xs' %></td>
-                  <td><%= link_to '<i class="fa fa-pencil-square-o fa-lg""></i>'.html_safe, edit_card_path(product), class: 'btn btn-warning btn-xs' %></td>
+                  <td><%= link_to '<i class="fa fa-pencil-square-o fa-lg""></i>'.html_safe, edit_card_path(card), class: 'btn btn-warning btn-xs' %></td>
                   <td><%= link_to '<i class="fa fa-trash-o fa-lg""></i>'.html_safe, card, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
                 </tr>
               <% end %>
