--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,49 +1,40 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+					<div class="panel-title">
+						<h3 class="text-center">Card Details</h3>
+					</div>
+        </div>
+        <div class="panel-body">
+          <p>
+            <strong>Stripe Id:</strong>
+            <%= @card.stripe_id %>
+          </p>
+          <p>
+            <strong>Card Name:</strong>
+            <%= @card.card_name %>
+          </p>
+          <p>
+            <strong>Last 4:</strong>
+            <%= @card.card_last_four %>
+          </p>
 
-<p>
-  <strong>Stripe:</strong>
-  <%= @card.stripe_id %>
-</p>
-
-<p>
-  <strong>Card name:</strong>
-  <%= @card.card_name %>
-</p>
-
-<p>
-  <strong>Card last four:</strong>
-  <%= @card.card_last_four %>
-</p>
-
-<p>
-  <strong>Card type:</strong>
-  <%= @card.card_type %>
-</p>
-
-<p>
-  <strong>Card exp month:</strong>
-  <%= @card.card_exp_month %>
-</p>
-
-<p>
-  <strong>Card exp year:</strong>
-  <%= @card.card_exp_year %>
-</p>
-
-<p>
-  <strong>Default card:</strong>
-  <%= @card.default_card %>
-</p>
-
-<p>
-  <strong>=:</strong>
-  <%= @card.= %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @card.user %>
-</p>
-
-<%= link_to 'Edit', edit_card_path(@card) %> |
-<%= link_to 'Back', cards_path %>
+          <p>
+            <strong>Type:</strong>
+            <%= @card.card_type %>
+          </p>
+          <p>
+            <strong>Expiration:</strong>
+            <%= @card.card_exp_combined %>
+          </p>
+        </div>
+        <div class="panel-footer">
+          <%= link_to 'Edit', edit_card_path(@card) %></br>
+          <%= link_to 'Back', cards_path %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
