--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -18,9 +18,10 @@
               <tr>
                 <th>Stripe Id</th>
   	            <th>Product</th>
-  	            <th>User ID</th>
   	            <th>Name</th>
   	            <th>Email</th>
+                <th>Price</th>
+                <th>Date</th>
                 <th>Show</th>
                 <th colspan="3"></th>
               </tr>
@@ -31,9 +32,10 @@
                 <tr>
                   <td><%= sale.stripe_id %></td>
                   <td><%= sale.product.name %></td>
-                  <td><%= sale.user.id %></td>
                   <td><%= sale.user.full_name %></td>
                   <td><%= sale.user.email %></td>
+                  <td><%= formatted_price(sale.product.price) %></td>
+                  <td><%= sale.created_at.strftime("%m/%d/%Y") %></td>
                   <td><%= link_to '<i class="fa fa-folder-open-o fa-lg"></i>'.html_safe, sale, class: 'btn btn-success btn-xs' %></td>
                 </tr>
               <% end %>
