--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -4,27 +4,36 @@
       <div class="panel panel-default">
         <div class="panel-heading">
 					<div class="panel-title">
-						<h3 class="text-center"><%= sale.product.name.titleize %></h3>
+						<h3 class="text-center"><%= @sale.product.name.titleize %></h3>
 					</div>
         </div>
         <div class="panel-body">
           <p>
             <strong>Stripe Id:</strong>
-            <%= sale.stripe_id %>
+            <%= @sale.stripe_id %>
           </p>
           <p>
             <strong>User Id:</strong>
-            <%= sale.user.id %>
+            <%= @sale.user.id %>
           </p>
           <p>
             <strong>Name:</strong>
-            <%= sale.user.full_name %>
+            <%= @sale.user.full_name %>
           </p>
 
           <p>
             <strong>Email:</strong>
-            <%= sale.user.email %>
+            <%= @sale.user.email %>
           </p>
+
+					<p>
+						<strong>Price:</strong>
+						<%= formatted_price(@sale.product.price)  %>
+					</p>
+					<p>
+						<strong>Date:</strong>
+						<%= @sale.created_at.strftime("%m/%d/%Y") %>
+					</p>
         </div>
         <div class="panel-footer">
           <%= link_to 'Back', sales_path %>
