--- a/app/views/transactions/thank_you.html.erb
+++ b/app/views/transactions/thank_you.html.erb
@@ -1,4 +1,4 @@
 <h4>Thank You!</h4>
-<b>Product: </b>
-<b>Price:   </b>
+<b>Product: <%= %></b>
+<b>Price:   <%= @product.inspect %></b></br>
 <%= current_user.inspect %>
