--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -48,6 +48,7 @@
               <li role="separator" class="divider"></li>
               <li><%= link_to 'Cards', cards_path %></li>
               <li><%= link_to 'Purchases', show_purchases_path %></li>
+              <li><%= link_to 'Subscriptions', show_subscriptions_path %></li>
             </ul>
           </li>
         <% else %>
