added bootstrap init for popover and tooltips refactored update-card.js for disabled default card update stripe card now just updates if default is checked added default ternary to card show added popover to card edit view

--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -348,8 +348,8 @@
             			</div>
                   <div class="col-md-6">
 										<div class="form-check-inline">
-											<label class="form-check-label">
-										    <input class="form-check-input" id="default-card" type="checkbox" value="<%= @card.card_default? %>">
+											<label class="form-check-label has-popover" data-toggle='popover' data-placement='top' title="Default Card" data-content="Change by updating card that is not currently default." (popover)>
+										    <input class="form-check-input " id="default-card" type="checkbox" value="<%= @card.card_default? %>">
 												Make Card Default?
 										  </label>
 										</div>
