--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -53,6 +53,10 @@
 						<strong>Country:</strong>
 						<%= @card.address.address_country %>
 					</p>
+					<p>
+						<strong>Default Card:</strong>
+						<%= @card.default_card? ? 'Yes' : 'No' %>
+					</p>
         </div>
         <div class="panel-footer">
           <%= link_to 'Edit', edit_card_path(@card) %></br>
